--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.1",
     "jest": "^29.7.0"
   }
 }
