--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install modules
+      run: npm i
     - name: Test & publish code coverage
       uses: paambaati/codeclimate-action@v5.0.0
       env:
